todo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 8080
